// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Temp details reducer should set the temp capacity 1`] = `
Object {
  "capacity": 20,
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp capacity type 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp description 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "new description",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end date 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "January 1, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end date moment 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": Object {
    "type": "moment",
  },
  "endTime": "19:30:00",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end time 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "13:45",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp price 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "price": 99,
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp sku 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "price": "",
  "sku": "12345678",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start date 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "price": "",
  "sku": "",
  "startDate": "January 1, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start date moment 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": Object {
    "type": "moment",
  },
  "startTime": "19:30:00",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start time 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "13:45",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp title 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30:00",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "title": "new title",
}
`;
